[gd_scene load_steps=7 format=3 uid="uid://rnil3vsuysxu"]

[ext_resource type="Script" uid="uid://mxkd6oeusiyl" path="res://Entities/Characters/Player/player.gd" id="1_4flbx"]
[ext_resource type="Resource" uid="uid://dkoqrxg7xhnki" path="res://Entities/Characters/Player/default_player.tres" id="2_aur4w"]
[ext_resource type="Script" uid="uid://5i4lgrwtcibo" path="res://Components/input_controller.gd" id="3_icjhs"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sh265"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_sh265"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4flbx"]

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_4flbx")
model = ExtResource("2_aur4w")
metadata/_custom_type_script = "uid://bql681108ghc1"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_sh265")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_sh265")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera" type="Camera3D" parent="Head"]
cull_mask = 1048573
current = true
fov = 80.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="Head/Camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Head/Camera/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
msaa_3d = 1
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="CameraItem" type="Camera3D" parent="Head/Camera/SubViewportContainer/SubViewport"]
cull_mask = 1047554
current = true
fov = 40.0

[node name="Container" type="Node3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, -1, -2.25)

[node name="Muzzle" type="AnimatedSprite3D" parent="Head/Camera/SubViewportContainer/SubViewport/CameraItem"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, -0.75, -6)
layers = 2
sprite_frames = SubResource("SpriteFrames_4flbx")

[node name="RayCast" type="RayCast3D" parent="Head/Camera"]
exclude_parent = false
target_position = Vector3(0, 0, -10)
collide_with_areas = true

[node name="InputController" type="Node" parent="."]
script = ExtResource("3_icjhs")
metadata/_custom_type_script = "uid://5i4lgrwtcibo"
